# Ariadne

./: .gitignore  Ariadne.csproj  Ariadne.sln  AriadneInfo.cs  CITATION.cff  FUTURE.md  LICENSE.txt  README.md  apiFilter.yml  build.ps1  build.sh  docfx.json  index.md  toc.yml
Ariadne/: Ariadne.csproj  AriadneInfo.cs
Examples/: Getting_Started.gh
FDM/: ConstructNetwork.cs  ConstructProblem.cs  DeconstructNetwork.cs  FDM_Network.cs  FDM_Problem.cs  QByLayer.cs
FEA/: BarNetwork.cs  FEA_Model.cs  FEA_Network.cs  FEA_SolidNetwork.cs  FeaBarElement.cs  FeaLoad.cs  FeaMaterial.cs  FeaObjectiveBase.cs  FeaResult.cs  FeaSection.cs  FeaSolidSupportRegion.cs  FeaSolverModels.cs  FeaSolverService.cs  FeaSupport.cs  ShellMesh.cs  ShellSolverService.cs  SolidMesh.cs  SolidSolverService.cs
Graphs/: ConstructGraph.cs  DeconstructGraph.cs  DefineFacesComponent.cs  FindFacesComponent.cs  Graph.cs
Objectives/: OBJ.cs  (+5 more)
Theseus/rust/: Cargo.toml  libtheseus.dylib
Theseus/rust/src/: fdm.rs  fea_assembly.rs  fea_ffi.rs  fea_gradients.rs  fea_objectives.rs  fea_optimizer.rs  fea_solve.rs  fea_types.rs  ffi.rs  gradients.rs  inverse.rs  lib.rs  objectives.rs  optimizer.rs  shell_assembly.rs  shell_ffi.rs  shell_solve.rs  shell_spr.rs  shell_spr_ffi.rs  shell_types.rs  solid_assembly.rs  solid_ffi.rs  solid_solve.rs  solid_spr.rs  solid_spr_ffi.rs  solid_types.rs  sparse.rs  types.rs
Theseus/rust/tests/: bench_release.rs  fd_gradient.rs  fdm_all_objectives_fd.rs  fea_fd_gradient.rs  ffi_roundtrip.rs  integration.rs  optimization_diagnostic.rs  solid_cantilever_sanity.rs
(+136 files in other folders)
